<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/greetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greetings"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:textColor="@color/dark_gray"
                android:layout_marginStart="16dp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/profile_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_person_24"
                android:background="@drawable/profile_button_bg"
                android:layout_alignParentEnd="true"
                android:elevation="8dp"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="16dp" />


        </RelativeLayout>

        <TextView
            android:id="@+id/home_page_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/headline"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:searchIcon="@drawable/search_right"
            app:queryHint="@string/queryhint"
            android:background="@drawable/search_view_bg"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/top_skills"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendedSkillRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="8dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp"
            android:paddingEnd="8dp"
            android:clipToPadding="true"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/people_like"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/peopleLikeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:scrollbars="none" />


        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/white" />

    </LinearLayout>

</ScrollView>